--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       <div class="wrapper">
         <ul>
           <li>
-            <a href="" class="button">
+            <a
+              href="https://www.linkedin.com/in/rodrigo-brandao/"
+              class="button"
+              target="_blank"
+            >
               Linkedin
               <svg
                 width="24"
@@ -59,7 +63,7 @@
             </a>
           </li>
           <li>
-            <a class="button" href="">
+            <a target="_blank" class="button" href="https://github.com/sirwhod">
               GitHub
               <svg
                 width="24"
@@ -86,7 +90,11 @@
             </a>
           </li>
           <li>
-            <a class="button" href="">
+            <a
+              target="_blank"
+              class="button"
+              href="https://www.instagram.com/sirwhodd.png/"
+            >
               Instagram
               <svg
                 width="24"
@@ -120,7 +128,11 @@
             </a>
           </li>
           <li>
-            <a class="button" href="">
+            <a
+              target="_blank"
+              class="button"
+              href="https://www.twitch.tv/sirwhodd"
+            >
               Twitch
               <svg
                 width="24"
